--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -1,11 +1,17 @@
 @media screen and (max-width: 1080px) {
-	#pfp, .image-1 {
+	#pfp {
 		transition: none;
 	}
 
-	.image-container:hover .bg,
-	.image-container:hover .image-1 {
+	.image-1 {
+		transition: none;
+	}   
+
+	.image-container:hover .bg {
 		bottom: 0px;
+	}
+
+	.image-container:hover .image-1 {
 		left: 0px;
 	}
 
@@ -13,15 +19,12 @@
 		position: relative;
 		display: flex;
 		flex-direction: column;
-		padding: 10px;
-		width: 100%;
 	}
 
 	.header {
 		width: 100%;
 		background-image: url(assets/profile/phone-pfp.png);
 		display: grid;
-		place-items: center;
 	}
 
 	.image-container {
@@ -31,96 +34,225 @@
 
 	.about-col-1 img {
 		border-radius: 15px;
-		height: auto;
-		width: 100px;
-		display: block;
-		margin: 0 auto;
+		height: 150px;
+		position: absolute;
+		display: flex;
+		padding-left: 50px;
 	}
 
-	.navlinks, .row {
+	.image-container img {
+		height: 0px;
+		bottom: 0;
+		left: 0;
+		display: none;
+		padding-left: 0px;
+	}
+
+	.navlinks {
+		display: none;
+	}
+
+	.row {
 		display: none;
 	}
 
 	.row-2 {
-		display: block;
+		display: grid;
 	}
 
 	.title {
+		top: 30%;
 		color: var(--secondary-color);
-		text-align: center;
+		text-align: left;
+		transition: all 0.3s ease-in-out;
+		right: 0px;
+	}
+
+	p.subtitle {
+		display: none;
+	}
+
+	span.subititle {
+		color: #bc8314;
+	}
+
+	h1.titled {
+		line-height: 45px;
+		font-size: 18pt;
+		color: var(--secondary-color);
 		transition: all 0.3s ease-in-out;
 	}
 
-	h1.titled, h2.titled {
-		font-size: 16pt;
+	h2.titled {
+		line-height: 45px;
+		font-size: 14pt;
 		color: var(--secondary-color);
-		text-align: center;
-		margin: 10px 0;
 		transition: all 0.3s ease-in-out;
 	}
 
-	h1.titled-3, h1.titled-7 {
-		font-size: 20pt;
+	h1.titled-3 {
+		font-size: 25pt;
 		background: linear-gradient(-541deg, #FFD700, #bc8314, #422006);
 		-webkit-background-clip: text;
 		background-clip: text;
 		-webkit-text-fill-color: transparent;
-		text-align: center;
+		transition: all 0.3s ease-in-out;
+		padding-left: 50px;
+	}
+
+	h1.titled-7 {
+		font-size: 18pt;
+		-webkit-background-clip: text;
+		background-clip: text;
+		-webkit-text-fill-color: transparent;
+		transition: all 0.3s ease-in-out;
+		padding-left: 60px;
 	}
 
 	.social {
 		display: flex;
 		position: relative;
 		flex-wrap: wrap;
-		margin-top: 100px;
-		gap: 1rem;
+		margin-top: 500px;
+		gap: 1.4rem;
 		justify-content: center;
 		align-items: center;
 	}
 
+	.social a {
+		display: none;
+		place-items: center;
+		text-decoration: none;
+		color: #bc8314;
+		font-size: 1.5rem;
+		border: 1.6px solid #bc8314;
+		border-radius: 50%;
+		padding: 0.39rem;
+		text-align: center;
+	}
+
+	.social a:hover {
+		color: #fff;
+		background-color: #bc8314;
+		box-shadow: 0 0 20px #bc8314;
+		transition: all .3s ease-in-out;
+	}
+
+	.paragraph-2 {
+		color: var(--secondary-color);
+		font-size: 12pt;
+		transition: all 0.3s ease-in-out;
+		padding-left: 50px;
+		min-width: 300px;
+		max-width: 1000px;
+	}
+
+	.paragraph-3 {
+		color: var(--secondary-color);
+		font-size: 12pt;
+		transition: all 0.3s ease-in-out;
+		padding-left: 60px;
+		min-width: 300px;
+		max-width: 1000px;
+	}
+
+	body {
+		background: var(--primary-color);
+		transition: all .3s ease-in-out;
+	}
+
+	.about-col-1 {
+		display: none;
+	}
+
+	.about-col-2 {
+		display: none;
+	}
+
+	#about {
+		height: 800px;
+	}
+
 	.social-2 {
-		margin-top: 20vh;
-		padding: 10px;
-		position: fixed;
-		bottom: 0;
+		display: flex;
+		top: 0;
+		margin-top: 87vh;
+		margin-bottom: 34vh;
+		justify-content: center;
 		left: 0;
-		width: 100%;
+		right: 0;
+		padding: 25px 10px 25px 0px;
 		background-color: var(--primary-color);
 		transition: all 0.3s ease-in-out;
+		position: fixed;
+		z-index: 100;
+		flex-wrap: wrap;
+		gap: 1.4rem;
 	}
 
 	.social-2 a {
-		display: inline-block;
-		font-size: 1.2rem;
-		margin: 0 10px;
+		display: grid;
+		place-items: center;
+		text-decoration: none;
+		color: #bc8314;
+		font-size: 1.5rem;
+		border: 1.6px solid #bc8314;
+		border-radius: 50%;
+		padding: 0.39rem;
+		text-align: center;
+	}
+
+	.social-2 a:hover {
+		color: #fff;
+		background-color: #bc8314;
+		box-shadow: 0 0 20px #bc8314;
+		transition: all .3s ease-in-out;
 	}
 
 	footer {
-		text-align: center;
 		background: var(--primary-color);
-		padding: 10px;
+		align-items: center;
 	}
 
-	.compatibility, .phone-text {
-		display: block;
-		width: 100%;
-		padding: 0 15px;
-		text-align: center;
+	.phone-col {
+		display: grid;
+	}
+
+	.compatibility {
+		display: flex;
+		position: relative;
+		height: 400px;
+		padding-left: 30px;
+	}
+
+	.phone-text {
+		display: flex;
+		position: relative;
 	}
 
 	p.subtitle-phone {
-		font-size: 14pt;
-		padding: 5px;
-		text-align: center;
-		width: 90%;
-		margin: 0 auto;
+		color: var(--secondary-color);
+		text-overflow: ellipsis;
+		min-width: 1000px;
+		max-width: 4500px;
+		transition: all 0.3s ease-in-out;
+	}
+
+	.contact-right {
+		padding-left: 50px;
 	}
 
 	.tab-contents-2 ul li {
 		list-style: none;
 		margin: 10px 0;
-		text-align: center;
-		padding-left: 0;
+		padding-left: 60px;
 		color: var(--secondary-color);
+		transition: all 0.3s ease-in-out;
+	}
+
+	.tab-contents-2 ul li span {
+		color: #bc8314;
+		font-size: 15px;
+		font-weight: bold;
 	}
 }
